fixed search box on mobile; extra margin off navbar for mobile

--- a/css/style.css
+++ b/css/style.css
@@ -6410,6 +6410,13 @@ p:last-child,
   .region-searchtop .search-block-form {
     float: right;
     width: 25%; }
+    @media (max-width: 767px) {
+      .region-searchtop .search-block-form {
+        float: none;
+        width: 100%;
+        padding-left: 20px; }
+        .region-searchtop .search-block-form .form-group {
+          margin-bottom: 0; } }
 
 /*branding area*/
 .region-navigation {
@@ -6465,6 +6472,10 @@ p:last-child,
 
 .dropdown-menu > li > a:hover, .dropdown-menu > li > a:focus {
   background-color: #D2204D; }
+
+@media (max-width: 767px) {
+  .navbar {
+    margin-bottom: 0; } }
 
 /*main menu*/
 .main-menu {
