--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -52,7 +52,16 @@
   clear: both;
   width: 100%;
   background: $red;
-  .search-block-form {float: right; width:25%;}
+  .search-block-form {
+    float: right;
+    width:25%;
+    @include media("<tablet") {
+      float: none;
+      width: 100%;
+      padding-left: 20px;
+      .form-group { margin-bottom: 0;}
+    }
+  }
 }
 
 /*branding area*/
@@ -113,6 +122,12 @@
 
 .dropdown-menu > li > a:hover, .dropdown-menu > li > a:focus {
   background-color: $hover-back;
+}
+
+.navbar {
+  @include media("<tablet") {
+    margin-bottom: 0;
+  }
 }
 
 /*main menu*/
